--- a/index.html
+++ b/index.html
@@ -79,21 +79,21 @@
     <h2>Quiz</h2>
     <dl>
       <dt>What is an 'event listener'?</dt>
-      <dd>(put your answer here)</dd>
+      <dd>Where an element or object is set to wait for an event</dd>
       <dt>How do you attach an event listener that responds to a 'click' event to an element using jQuery?</dt>
-      <dd>(put your answer here)</dd>
+      <dd>.click()</dd>
       <dt>What is the ID of the place where the output of the loop function should go?</dt>
-      <dd>(put your answer here)</dd>
+      <dd>alert</dd>
       <dt>What is the class that changes the style of the output area?</dt>
-      <dd>(put your answer here)</dd>
+      <dd>#output_area</dd>
       <dt>What does the selector input[value="Run Script"] do? Enter the URLs of the places you researched with your explanation.</dt>
-      <dd>(put your answer here)</dd>
+      <dd>Runs the script.  Could not find documentation</dd>
       <dt>What is the URL of the documentation for the jQuery <kbd>.addClass</kbd> method?</dt>
-      <dd>(put your answer here)</dd>
+      <dd>https://api.jquery.com/addclass/</dd>
       <dt>What is the URL of the documentation for GitHub Pages? What does creating the <kbd>gh-pages</kbd> branch do on github.com</dt>
-      <dd>(put your answer here)</dd>
+      <dd>https://help.github.com/   creates a branch to make changes on</dd>
       <dt>What is the URL of the documentation for the <kbd>$(document).ready()</kbd> jQuery method?</dt>
-      <dd>(put your answer here)</dd>
+      <dd>https://learn.jquery.com/using-jquery-core/document-ready/</dd>
 
     </dl>
 
